#1145 Raj Fixed alignment for smart answers in tablet and desktop view

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_smartAnswers.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_smartAnswers.scss
@@ -1,8 +1,11 @@
 ﻿﻿#smart-answers-container {
     background-color: #fff;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1140px;
 
     @media #{$desktop, $tablet} {
-        padding-left: 40px;
+        padding-left: 30px;
     }
 
     h1 {
